--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
       It will be replaced with the URL of the `public` folder during the build.
       Only files inside the `public` folder can be referenced from the HTML.
     -->
-    <title>React App</title>
+    <title>users list</title>
   </head>
   <body>
     <noscript>
